--- a/成本与算力关系研究.md
+++ b/成本与算力关系研究.md
@@ -98,6 +98,53 @@
 对比上表和利润线，可以看出，若要保证6个月的回本周期（硬件成本12000时），市场价格需达到电费成本的6倍，即盈利率在500%。
 
 
+## 维持不同状态的资金量需求
+
+这个资金量需求受不同状态条件，以及时间周期约束。以下我们**以6个月的时间周期**进行探讨。
+
+主要的状态条件：
+
+- 时间周期：6个月
+- 算力水平 n：n=500 和 n=1000
+- 利润空间 f：假设最低状态 f=100% ；最高状态 f=500%
+
+| 矿机数 n=H/h（台）| 成本 C =12.96n/R （元）|100%利润的价格 |500% 利润的价格 |
+|-----|-----|--------|------------|
+|500 |0.01731|0.03462 |0.10386|
+|1000|0.03462|0.06923 |0.20769|
+
+6个月的总产币量：180R=67392000
+
+### n=500时
+
+- 维持500台矿机的算力水平，利润空间在100%时所需的资金量：
+
+  - 回收全部币量所需资金：67392000×0.03462=2333111 ，约233.3万元；
+  - 回收80%币量所需资金: 67392000×0.03462×80%=1866489，约186.6万元；
+  - 回收60%币量所需资金：67392000×0.03462×60%=1399867，约140万元。
+  
+- 维持500台矿机的算力水平，利润空间在500%时所需的资金量：
+
+  - 回收全部币量所需资金：67392000×0.10386=6999333，约700万元；
+  - 回收80%币量所需资金: 67392000×0.10386×80%=5599466，约560万元；
+  - 回收60%币量所需资金：67392000×0.10386×60%=4199600，约420万元。
+  
+### n=1000时
+
+- 维持1000台矿机的算力水平，利润空间在100%时所需的资金量：
+
+  - 回收全部币量所需资金：67392000×0.06923=4665548 ，约466.6万元；
+  - 回收80%币量所需资金: 67392000×0.06923×80%=3732439，约373.2万元；
+  - 回收60%币量所需资金：67392000×0.06923×60%=2799329，约280万元。
+  
+- 维持1000台矿机的算力水平，利润空间在500%时所需的资金量：
+
+  - 回收全部币量所需资金：67392000×0.20769=13996644 ，约1400万元；
+  - 回收80%币量所需资金: 67392000×0.20769×80%=11197316，约1120万元；
+  - 回收60%币量所需资金：67392000×0.20769×60%=8397987，约840万元。
+
+
+
 ## 总结
 
 以上估算方法中有几个固定变量：
