--- a/成本与算力关系研究.md
+++ b/成本与算力关系研究.md
@@ -157,7 +157,25 @@
 以上估算通过数学模型模拟了成本与算力的相关变化，通过分析算力水平n、价格（成本）、盈利率、回本周期之间的对应关系，对于市值管理有很大的指导作用。
 
          
+### 固定变量值改变对结果的影响 
 
+本文中用到的几个公式：
+
+- 电费成本计算公式： C=24neP/R 
+- 盈利额计算公式：：ΔC=fC × ΔN =12.96ft 
+- 固定周期平摊硬件成本的单币成本（6个月）：C= (12000n+24neP*180)/180R     
+
+由公式可以看出这里面可能发生变化的固定变量有：电费e，额定功率P，矿机成本12000。其中e、p对结果的影响是线性正相关，因此我们只需在**本文结果上乘以e、p的变化系数**，即可获得**新结果**。包含了硬件成本的情况需代入相应系数另做计算。
+
+- 当只有功率变化时，例如矿机额定功率为2kw/h时，其变化系数为 P/1.35=2/1.35=1.48；
+
+- 当只有电费变化时，例如电费为0.45元，其变化系数为 e/0.4=0.45/0.4=1.125
+
+若这两者同时变化，则总和变化系数为 1.48×1.125=1.665。
+
+那么此时，电费成本需在本文基础上乘以1.665，即 C=24neP/R=1.665 × 12.96n/R =21.5784n/R。
+
+相应的资金需求量探讨中也同样乘以1.665即可，例如维持1000台矿机的算力水平，利润空间在500%时所需的资金量（回收80%币量，6个月）：1.665 × 67392000×0.20769×80%=18643530，约1864.4万元。
 
 
 
