--- a/成本与算力关系研究.md
+++ b/成本与算力关系研究.md
@@ -165,7 +165,7 @@
 - 盈利额计算公式：：ΔC=fC × ΔN =12.96ft 
 - 固定周期平摊硬件成本的单币成本（6个月）：C= (12000n+24neP*180)/180R     
 
-由公式可以看出这里面可能发生变化的固定变量有：电费e，额定功率P，矿机成本12000。其中e、p对结果的影响是线性正相关，因此我们只需在**本文结果上乘以e、p的变化系数**，即可获得**新结果**。包含了硬件成本的情况需代入相应系数另做计算。
+由公式可以看出这里面可能发生变化的固定变量有：电费e，额定功率P，矿机成本12000。其中e、p对结果的影响是线性正相关，因此我们只需在**本文结果上乘以e、p的变化系数**，即可获得**新结果**。包含了硬件成本的情况（第三节）需代入相应系数另做计算，其单一变量的改变还达不到线性影响的级别。其次，硬件成本的增加无疑是会导致回本周期的增长，从第二节的探讨来看，这种变化的影响也几乎是成线性的，因此也可以直接乘以变化系数。
 
 - 当只有功率变化时，例如矿机额定功率为2kw/h时，其变化系数为 P/1.35=2/1.35=1.48；
 
