--- a/成本与算力关系研究.md
+++ b/成本与算力关系研究.md
@@ -175,7 +175,7 @@
 
 那么此时，电费成本需在本文基础上乘以1.665，即 C=24neP/R=1.665 × 12.96n/R =21.5784n/R。
 
-相应的资金需求量探讨中也同样乘以1.665即可，例如维持1000台矿机的算力水平，利润空间在500%时所需的资金量（回收80%币量，6个月）：1.665 × 67392000×0.20769×80%=18643530，约1864.4万元。
+相应的资金需求量探讨中也同样乘以1.665即可，例如维持1000台矿机的算力水平，利润空间在500%时所需的资金量（回收80%币量，6个月）：1.665 × 67392000×0.20769×80%=18643530，约1864.4万元，原来为1120万。
 
 
 
